<resources>
    <string name="app_name">Practice</string>
    <string name="app_path" translatable="false">Practice</string>
    <string name="exit_tips" translatable="false">再按一次退出应用</string>

    <string name="tab_home">Home</string>
    <string name="tab_category">Category</string>
    <string name="tab_attention">Attention</string>
    <string name="tab_resume">resume</string>
    <string name="tab_my">My</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="more">More</string>

    <string name="menu_shake">摇一摇</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_notice">消息中心</string>
    <string name="menu_invite_friend">邀请好友</string>
    <string name="menu_share">分享</string>

    <string name="current_city">City</string>
    <string name="default_city">ShangHai</string>

    <string name="head_search_hit">AI 实习</string>
    <string name="head_tab_category_1">行业</string>
    <string name="head_tab_category_2">专业</string>
    <string name="head_tab_category_3">职业</string>
    <string name="category_head_1" translatable="false">理科</string>
    <string name="category_head_2" translatable="false">工科</string>
    <string name="category_head_3" translatable="false">文科</string>
    <string name="category_head_4" translatable="false">商科</string>
    <string name="category_head_5" translatable="false">部门</string>
    <string name="category_head_6" translatable="false">职位</string>

    <string name="data_order_0">职业</string>
    <string name="data_order_1">行业</string>
    <string name="data_order_2">距离</string>
    <string name="data_order_3">报酬</string>
    <string name="data_order_4" translatable="false">排序</string>
    <string name="data_order_5" translatable="false">学历</string>
    <string name="data_order_6" translatable="false">工作经验</string>
    <string name="data_order_7" translatable="false">时间</string>

    <string name="search_his">历史搜索</string>
    <string name="search_hot">热门搜索</string>

    
    <string name="reward_hour"> 时薪 </string>
    <string name="reward_day"> 日薪 </string>
    <string name="reward_month"> 月薪 </string>
    <string name="distance_nearby">附近</string>
    <string name="distance_area">行政区域</string>
    <string name="distance_subway">地铁沿线</string>

    <string name="office_action_1">投递</string>
    <string name="office_action_2">收藏</string>
    <string name="office_action_3">关注</string>

    <string name="resume_head_1">基本\n信息</string>
    <string name="resume_head_2">简历\n照片</string>
    <string name="resume_head_3">实习\n工作</string>
    <string name="resume_head_4">语言\n技能</string>
    <string name="resume_head_5">所获\n荣誉</string>
    <string name="resume_head_6">校园\n生活</string>


    <string name="resume_head_title_1">基本信息</string>
    <string name="resume_head_title_2">简历照片</string>
    <string name="resume_head_title_3">实习工作</string>
    <string name="resume_head_title_4">语言技能</string>
    <string name="resume_head_title_5">所获荣誉</string>
    <string name="resume_head_title_6">校园生活</string>

    <string name="resume_info_name">姓名</string>
    <string name="resume_info_sex">性别</string>
    <string name="resume_info_src_place">生源地</string>
    <string name="resume_info_brithday">生日</string>
    <string name="resume_info_school">学校</string>
    <string name="resume_info_specialty">专业</string>
    <string name="resume_info_graduation">毕业年份</string>
    <string name="resume_info_educational">学历</string>
    <string name="resume_info_gradepoint">绩点</string>
    <string name="resume_info_mobile">手机</string>
    <string name="resume_info_email">邮箱</string>

    <string name="resume_work_company">公司名称</string>
    <string name="resume_work_office">职位</string>
    <string name="resume_work_time">时间</string>
    <string name="resume_work_content">工作内容简介</string>
    <string name="resume_lift_ogr">组织名称</string>
    <string name="resume_honor_name">荣誉名称</string>
    <string name="resume_honor_time">获取时间</string>
    <string name="resume_honor_content">荣誉详情</string>
    <string name="resume_time_select">时间选择</string>
    <string name="resume_time_begin">开始时间</string>
    <string name="resume_time_end">截止时间</string>

    <string name="resume_lang_name">语言名称</string>
    <string name="resume_lang_time">获取时间</string>
    <string name="resume_lang_content">技能详情</string>


    <string name="my_update_avatar">修改头像</string>
    <string name="my_nick_name">昵称</string>
    <string name="my_mobile">手机号</string>
    <string name="my_password">密码</string>
    <string name="my_email">邮箱</string>
    <string name="my_thrid_user">第三方帐号绑定</string>
    <string name="my_sex">性别</string>
    <string name="my_brithday">密码</string>
    <string name="my_school">就读大学</string>
    <string name="my_specialty">就读专业</string>
    <string name="my_grade">年级</string>
    <string name="my_sex_male">男</string>
    <string name="my_sex_female">女</string>

    <string name="btn_edit">编辑</string>
    <string name="btn_done">完成</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">添加</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_upload">上传</string>
    <string name="btn_save">保存</string>
    <string name="btn_ok">确认</string>
    <string name="btn_search">搜索</string>
    <string name="btn_logout">注销用户</string>

    <string name="office_detail">Office Detail</string>
    <string name="office_submit">Office Save</string>
    <string name="search_require">Office Require</string>

    <string name="city">City</string>
    <string name="city_select">City Setting</string>


    <string name="login">User Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login">登录</string>
    <string name="action_register">注册帐号</string>
    <string name="action_forget_passwd">忘记密码</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="register">User Register</string>
    <string name="input_mobile">手机号</string>
    <string name="input_mobile_hint">请输入手机号</string>
    <string name="input_email">Email</string>
    <string name="input_email_hint">请输入Email</string>
    <string name="input_password">密码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_password2">确认密码</string>
    <string name="input_password2_hint">请输入确认密码</string>
    <string name="input_select_sex">请选择性别</string>

    <string name="input_mobile_or_email">登录名</string>
    <string name="input_mobile_or_email_hint">请输入手机号/Email</string>

    <string name="my_item_0">Internship</string>
    <string name="my_item_1">Collection</string>
    <string name="my_item_2">Evaluation</string>

    <string name="my_message">消息通知</string>
    <string name="my_setting">设置</string>
    <string name="about">About</string>



    <string name="folder_all" translatable="false">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>

</resources>
