<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"  android:background="@color/all_line">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_dropdown_height" android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content" android:layout_margin="@dimen/dimen_10"
            android:layout_height="wrap_content" android:orientation="vertical">
            <Button
                android:layout_width="match_parent" android:text="@string/reward_hour"
                android:layout_height="wrap_content" android:id="@+id/btnRewardHour" />
            <Button
                android:layout_width="match_parent" android:text="@string/reward_day"
                android:layout_height="wrap_content" android:id="@+id/btnRewardDay" />
            <Button
                android:layout_width="match_parent" android:text="@string/reward_month"
                android:layout_height="wrap_content" android:id="@+id/btnRewardMonth" />

        </LinearLayout>
        <ListView android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>