<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  android:fitsSystemWindows="true" tools:context=".RInfoActivity">

       <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
           <LinearLayout style="@style/App_My_Info_LinearLayout" android:layout_height="110dp"
               android:layout_width="match_parent" android:orientation="horizontal" android:gravity="center_vertical">
               <ImageView android:background="@drawable/ic_launcher"
                   android:layout_width="80dp"
                   android:layout_height="80dp" />
               <TextView android:id="@+id/tvAvatar" style="@style/App_Resume_Info_Value"
                   android:layout_width="match_parent" android:text="@string/my_update_avatar"/>
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent" android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content" style="@style/App_Resume_Info_Title" android:text="@string/my_nick_name"/>
               <TextView android:id="@+id/tvNickName" style="@style/App_Resume_Info_Value"
                   android:layout_width="match_parent" />
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent"  android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content" style="@style/App_Resume_Info_Title" android:text="@string/my_mobile"/>
               <TextView android:id="@+id/tvMobile"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value" />
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent"  android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content" style="@style/App_Resume_Info_Title" android:text="@string/my_password"/>
               <TextView android:id="@+id/tvPassword"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value"/>
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent"  android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content" style="@style/App_Resume_Info_Title" android:text="@string/my_email"/>
               <TextView android:id="@+id/tvEmail"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value"/>
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent" android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content" style="@style/App_Resume_Info_Title" android:text="@string/my_thrid_user"/>
               <TextView android:id="@+id/tvThridUser" style="@style/App_Resume_Info_Value"
                   android:layout_width="match_parent"/>
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/dimen_20" android:background="@color/white"/>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent" android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content" style="@style/App_Resume_Info_Title" android:text="@string/my_sex"/>
               <TextView android:id="@+id/tvSex" style="@style/App_Resume_Info_Value"
                   android:layout_width="match_parent"/>
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent" android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"  style="@style/App_Resume_Info_Title" android:text="@string/my_brithday"/>
               <TextView android:id="@+id/tvBrithday"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value" />
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent"  android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"  style="@style/App_Resume_Info_Title" android:text="@string/my_school"/>
               <TextView android:id="@+id/tvSchool"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value" />
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent"  android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"  style="@style/App_Resume_Info_Title" android:text="@string/my_specialty"/>
               <TextView android:id="@+id/tvSepcialty"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value" />
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
           <LinearLayout style="@style/App_My_Info_LinearLayout"
               android:layout_width="match_parent"  android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"  style="@style/App_Resume_Info_Title" android:text="@string/my_grade"/>
               <TextView android:id="@+id/tvGrade"
                   android:layout_width="match_parent" style="@style/App_Resume_Info_Value"/>
           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="@dimen/line_h" android:background="@color/all_line"/>
        </LinearLayout>

</ScrollView>

